syntax = "proto2";

package douyin.extra.first;

option go_package = "../pkg;message";

import "user.proto";

/*
    /douyin/comment/action -评论操作
    点赞、取消点赞
    POST
*/

message douyin_comment_action_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token
    required int64 video_id = 3; // 视频id​
    required int32 action_type = 4; // 1-发布评论，2-删除评论
    optional string comment_text = 5; // 用户填写的评论内容，在action_type=1的时候使用
    optional int64 comment_id = 6; // 要删除的评论id，在action_type=2的时候使用​
}
message douyin_comment_action_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败
    optional string status_msg = 2; // 返回状态描述
}

/*
    /douyin/comment/list -评论列表
    查看视频的所有评论，按时间倒序
    GET
*/

message douyin_comment_list_request {
    required int64 user_id = 1; // 用户id​
    required string token = 2; // 用户鉴权token
    required int64 video_id = 3; // 视频id​
}
message douyin_comment_list_response {
    required int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    optional string status_msg = 2; // 返回状态描述​
    repeated Comment comment_list = 3; // 评论列表​
}
message Comment {
    required int64 id = 1; // 视频评论id​
    required douyin.core.User user =2; // 评论用户信息​
    required string content = 3; // 评论内容
    required string create_date = 4; // 评论发布日期，格式 mm-dd​
}
/*
message User {
    required int64 id = 1; // 用户id
    required string name = 2; // 用户名称​
    optional int64 follow_count = 3; // 关注总数​
    optional int64 follower_count = 4; // 粉丝总数​
    required bool is_follow = 5; // true-已关注，false-未关注
}
*/